--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@ permalink: /about/
         <p>
           <span>
             Understand a bit of the technical stuff? See all the code for this contact site on
-            <a href="//github.com/renemarcelo/100-civic-questions-quiz">
+            <a href="//github.com/caselinguist/">
               Github
               <i class="fa fa-github-alt" aria-hidden="true"></i></a>
           </span>
