--- a/about.html
+++ b/about.html
@@ -4,6 +4,20 @@ title: About
 permalink: /about/
 ---
 <div class="row">
+
+  <div class="col s12 m3 center-on-small-only">
+    <div class="image-container">
+      <img style="border-radius:50% 50%" src="/assets/rene.jpg">
+    </div>
+  </div>
+  <div class="col s12 m8 center-on-small-only">
+    <h4>René Marcelo</h4>
+    <p>Rene is an interpreter in Chicago.  He works for clients that require a certain high level of proficiency. </p>
+  </div>
+</div>
+</hr>
+</br>
+<!-- <div class="row">
   <div class="container">
     <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
       <div class="page-header">
@@ -16,7 +30,7 @@ permalink: /about/
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div class="row">
   <div class="container">
     <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
