--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@ permalink: /about/
       </h3>
       <p>
         We are not the
-        <a class="light-blue-text" href="//www.illinoiscourts.gov/CivilJustice/LanguageAccess/default.asp">Illinois Courts Language Access Program.</a>
+        <a class="light-blue-text" rel="external" href="http://www.illinoiscourts.gov/CivilJustice/AccessToJustice.asp">Illinois Courts Language Access Program.</a>
       </p>
     </div>
   </div>
