--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@ permalink: /contact/
 ---
 
 <div class="row">
+  <!-- sharing row -->
   <div class="col s12 m6">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
@@ -32,8 +33,10 @@ permalink: /contact/
       </div>
     </div>
   </div>
+
+  <!-- sharing row -->
   <div class="col s12 m6">
-    <p>
+
       <strong>Billing Address</strong>
       <address>
         <strong>Case Linguist LLC</strong>
@@ -43,16 +46,18 @@ permalink: /contact/
         Chicago, IL 60629
         <br />
       </address>
-    </p>
   </div>
 </div>
+
+
+<!-- new row -->
 <div class="row">
-  <div class="col offset-s7">
+  <div class="col offset-s4 offset-m7">
     <p>
       To be informed of updates to this site please feel free to subscribe to the email list.
     </p>
     <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
       <i class="fa fa-envelope-o" aria-hidden="true"></i>
-      Keep in Touch</a>
+      Mail List</a>
   </div>
 </div>
