--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About
+title: Case Linguist LLC
 permalink: /about/
 ---
 <div class="row">
@@ -11,7 +11,7 @@ permalink: /about/
     </div>
   </div>
   <div class="col s12 m8 center-on-small-only">
-    <h4>René Marcelo</h4>
+    <h4>Rene M. Paccha</h4>
     <p>Rene is an interpreter in Chicago.  He works for clients that require a certain high level of proficiency. </p>
   </div>
 </div>
