--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
 ---
 layout: page
-title: Linguist
+title: Case Linguist LLC
 permalink: /about/
 ---
 <div class="row">
+  <br/>
+
 
   <div class="col s12 m3 center-on-small-only">
     <div class="image-container">
@@ -12,7 +14,7 @@ permalink: /about/
   </div>
   <div class="col s12 m8 center-on-small-only">
     <h4>Rene M. Paccha</h4>
-    <p>Rene is an interpreter in Chicago.  He works for clients that require a certain high level of proficiency. </p>
+    <p>René is an SEO in Chicago. He gained his linguistic knowledge as an foreign-language interpreter in Chicago.</p>
   </div>
 </div>
 </hr>
@@ -33,31 +35,38 @@ permalink: /about/
 </div> -->
 <div class="row">
   <div class="container">
-    <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
+    <div class="col-md-7">
       <h3>
-        Email list
+        Work
       </h3>
       <div>
         <p>
           <span>
-            Understand a bit of the technical stuff? See all the code for this contact site on
+            Want to see an example of optimization at work? The code for this website is on
             <a href="//github.com/caselinguist/">
               Github
               <i class="fa fa-github-alt" aria-hidden="true"></i></a>
           </span>
         </p>
         <p>
-          To be informed of updates to this site please feel free to subscribe.
+          Please subscribe below to receive curated updates
         </p>
       </div>
     </div>
   </div>
 </div>
+
+
 <div class="row">
-  <div class="col offset-s7">
-    <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
-      <i class="fa fa-envelope-o" aria-hidden="true"></i>
-      Keep in Touch</a>
+  <div class="container">
+    <div class="col-md-7">
+      <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
+
+        <span class="flow-text">
+          Subscribe
+        </span>
+      </a>
+    </div>
   </div>
 </div>
 <div class="row">
@@ -76,14 +85,14 @@ permalink: /about/
 <div class="row">
   <div class="container">
     <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
-      <h3>
+      <!-- <h3>
         Updates pending
       </h3>
       <div>
         <p>
           An interpreter availability calendar.
         </p>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
