updated alt tags

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ permalink: /about/
 
   <div class="col s12 m3 center-on-small-only">
     <div class="image-container">
-      <img style="border-radius:50% 50%" src="/assets/rene.jpg">
+      <img style="border-radius:50% 50%" src="/assets/rene.jpg" alt="rene picture">
     </div>
   </div>
   <div class="col s12 m8 center-on-small-only">
