--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ permalink: /about/
   </div>
   <div class="col s12 m8 center-on-small-only">
     <h4>Rene M. Paccha</h4>
-    <p>René is an SEO in Chicago. He gained his linguistic knowledge as an foreign-language interpreter in Chicago.</p>
+    <p>René is an SEO in Chicago. He gained his linguistic knowledge as a foreign-language interpreter in Chicago.</p>
   </div>
 </div>
 </hr>
