--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  .container-alt {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -16,8 +16,8 @@ layout: default
   }
 </style>
 
-<div class="container">
-  <h1>Privacy</h1>
+<div class="container-alt">
+  <h1">Privacy</h1>
 
   <p><strong>User Data</strong></p>
   <p>Case Linguist uses Google analytics to better understand user engagement.</p>
