--- a/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
+++ b/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Not all clients type in English in search"
+title: "Not all clients type English in search"
 lang: en
 categories: Law-Firm-SEO Immigration
 tags: Law Technology
@@ -8,7 +8,7 @@ author: Rene M. Paccha
 
 ---
 <p>
-  Spanish speakers search for legal help online, too.  This will not always be in English.  SEO considerations must be made for Criminal and Immigration court-bound clients that speak Spanish. Searches happen in Spanish, too.
+  SEO considerations must be made for Criminal and Immigration court bound clients that speak a foreign language. Searches happen in Spanish, too.
 
 </p>
 
@@ -48,7 +48,6 @@ author: Rene M. Paccha
               Moz: Abogado (es-US), 6.5k-9.3k Monthly Volume.  Volume ranges show you (with 95% or more accuracy) how often a term or phrase is searched for in Google each month.
 
 
-
         </div>
 
         <div class="card-action">
@@ -58,20 +57,9 @@ author: Rene M. Paccha
         </div>
       </div>
     </div>
-
   </div>
-
 </div>
-
-
-
-
-
-
-
 <p>
-
-
 
 <h3>Keywords and Spanish-speaking searchers</h3>
 </p>
@@ -80,16 +68,12 @@ author: Rene M. Paccha
 <span><strong>Google Trends Vizualization for spanish words (Illinois)</strong> show searches for abogados and another term which historically, outside of search, has led to the use of <a href="https://aila.org/advo-media/tools/psas/psa-on-cir-and-notarios-04-29-13">unauthorized consultants</a> . For example, <a href='https://aila.org/practice/consumer-protection/stop-notario-fraud'>notario, is not a lawyer</a>.</span>
 </p>
 
-
-
     <script src='https://ssl.gstatic.com/trends_nrtr/1754_RC01/embed_loader.js' type='text/javascript'></script>
     <script>
       trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"abogado","geo":"US-IL","time":"2018-03-06 2019-03-06"},{"keyword":"notario","geo":"US-IL","time":"2018-03-06 2019-03-06"}],"category":0,"property":""}, {"exploreQuery":"geo=US-IL&q=abogado,notario&date=today 12-m,today 12-m","guestPath":"https://trends.google.com:443/trends/embed/"});
     </script>
 
-
 <br/>
-
 
 <h3>Other SEO-related considerations</h3>
 <ul>
