--- a/about.html
+++ b/about.html
@@ -33,6 +33,26 @@ permalink: /about/
     </div>
   </div>
 </div> -->
+
+<div class="row">
+  <div class="container">
+    <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
+      <h3>
+        RSS feed available
+      </h3>
+      <div>
+        <li class='rss-subscribe'>
+          subscribe
+          <a class="flow-text" href='{{ "/feed.xml" | relative_url }}'>via RSS</a>
+        </li>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="row">
   <div class="container">
     <div class="col-md-7">
@@ -79,20 +99,6 @@ permalink: /about/
         We are not the
         <a class="light-blue-text" rel="external" href="http://www.illinoiscourts.gov/CivilJustice/AccessToJustice.asp">Illinois Courts Language Access Program.</a>
       </p> -->
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="container">
-    <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
-      <!-- <h3>
-        Updates pending
-      </h3>
-      <div>
-        <p>
-          An interpreter availability calendar.
-        </p>
-      </div> -->
     </div>
   </div>
 </div>
