--- a/about.html
+++ b/about.html
@@ -9,7 +9,10 @@ permalink: /about/
 
   <div class="col s12 m3 center-on-small-only">
     <div class="image-container">
-      <img style="border-radius:50% 50%" src="/assets/rene.jpg" alt="rene picture">
+      <div class="card">
+      <img src="/assets/about-rene-picture.jpg" alt="rene picture">
+      </div>
+
     </div>
   </div>
   <div class="col s12 m8 center-on-small-only">
@@ -61,12 +64,12 @@ permalink: /about/
       </h3>
       <div>
         <p>
-          <span>
+          <!-- <span>
             Want to see an example of optimization at work? The code for this website is on
             <a href="//github.com/caselinguist/">
               Github
               <i class="fa fa-github-alt" aria-hidden="true"></i></a>
-          </span>
+          </span> -->
         </p>
         <p>
           Please subscribe below to receive curated updates
