--- a/terms.html
+++ b/terms.html
@@ -21,7 +21,7 @@ layout: default
 
   <p><strong>Contact</strong></p>
   <p>It is strongly recommended to make contact via phone or email at <a href="mailto:rene@caselinguist.com">rene@caselinguist.com</a> <em>before</em> submitting payment.</p>
-  <p>For new clients without a previous agreement recorded via email,  Initial payment will act as a retainer and services performed will be billed hourly at $75/hour.</p>
+  <p>For new clients the initial payment will act as a retainer.  The rate of services performed will be billed hourly at $150/hour unless we agree otherwise.</p>
 
 
 </div>
