--- a/terms.html
+++ b/terms.html
@@ -19,7 +19,7 @@ layout: default
 <div class="container-alt">
   <h1>Terms</h1>
 
-  <p><strong>Contact</strong></p>
+  <p><strong>Contact First</strong></p>
   <p>It is strongly recommended to make contact via phone or email at <a href="mailto:rene@caselinguist.com">rene@caselinguist.com</a> <em>before</em> submitting payment.</p>
   <p>For new clients the initial payment will act as a retainer.  The rate of services performed will be billed hourly at $150/hour unless we agree otherwise.</p>
 
