hold on email subscribe

--- a/about.html
+++ b/about.html
@@ -64,16 +64,16 @@ permalink: /about/
       </h3>
       <div>
         <p>
-          <!-- <span>
+          <span>
             Want to see an example of optimization at work? The code for this website is on
             <a href="//github.com/caselinguist/">
               Github
               <i class="fa fa-github-alt" aria-hidden="true"></i></a>
-          </span> -->
+          </span>
         </p>
-        <p>
+        <!-- <p>
           Please subscribe below to receive curated updates
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
@@ -85,9 +85,9 @@ permalink: /about/
     <div class="col-md-7">
       <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
 
-        <span class="flow-text">
+        <!-- <span class="flow-text">
           Subscribe
-        </span>
+        </span> -->
       </a>
     </div>
   </div>
