--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,9 @@ permalink: /contact/
 
   <!-- sharing row -->
   <div class="col s12 m6">
+    <div class="container">
+
+
 
       <strong>Billing Address</strong>
       <address>
@@ -46,12 +49,13 @@ permalink: /contact/
         Chicago, IL 60629
         <br />
       </address>
+    </div>
   </div>
 </div>
 
 
 <!-- new row -->
-<div class="row">
+<!-- <div class="row">
   <div class="col offset-s4 offset-m7">
     <p>
       To be informed of updates to this site please feel free to subscribe to the email list.
@@ -60,4 +64,4 @@ permalink: /contact/
       <i class="fa fa-envelope-o" aria-hidden="true"></i>
       Mail List</a>
   </div>
-</div>
+</div> -->
