--- a/about.html
+++ b/about.html
@@ -83,12 +83,12 @@ permalink: /about/
 <div class="row">
   <div class="container">
     <div class="col-md-7">
-      <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
+      <!-- <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
 
-        <!-- <span class="flow-text">
+        <span class="flow-text">
           Subscribe
-        </span> -->
-      </a>
+        </span>
+      </a> -->
     </div>
   </div>
 </div>
