--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ permalink: /about/
    
      <p>I began to approach language localization over a two-year timespan in the Chicago techspace. I collabated to get websites front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together one-on-one with the architects of prominent civic apps.</p>
     
-    <p>To make our potential work successful,  I leverage data to provide recommendations and implement them as a developer. In a huge agency, communicating with the graphic design team or multiple developers does not necessarily mean the product will be ready to scale up, as subcontracting adequate translators and expert reviewers can mean pricing confusion as the big-company specialists become decoupled from the language experts. Marketing law services in a any language requires that you trust your SEO provider to understand their own SEO work!</p>
+    <p>Making adequate strides relies on careful communication in key steps. However, important details might get lost in the very process between the translator and SEO content strategist.</p>
 
 
   </div>
