--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ permalink: /about/
    
      <p>I began to approach language localization over a two-year timespan in the Chicago techspace. I collabated to get websites front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together one-on-one with the architects of prominent civic apps.</p>
     
-    <p>Making adequate strides relies on careful communication in key steps. However, important details might get lost in the very process between the translator and SEO content strategist.</p>
+    <p>It can be a great advantage to rely on the same expert for SEO and translation services. Otherwise, you might lose important details in the process to and from the SEO content strategist and the translator.</p>
 
 
   </div>
