--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ permalink: /about/
     
     <p>You may have heard of translations of expressions that sound funny in English.  Or vice versa, maybe you've tried to speak a few inert words in a foreign language but suddenly, everyone is up in arms! SEO is similar, in that it's meaning is uniquely affected based on who and where that target language is spoken (in search).  I conceptualized this while trained as a court interpreter.</p>
    
-     <p>I began to approach language localization over a two-year timespan in the Chicago techspace. I collabated to get websites in front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together one-on-one with the architects of prominent civic apps.</p>
+     <p>I began to approach language localization over a two-year timespan in the Chicago techspace. I collabated to get websites in front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together, one-on-one, with the architects of prominent civic apps.</p>
     
     <p>It can be a great advantage to rely on the same expert for SEO and translation services. Otherwise, you might lose important details in the process to and from the SEO content strategist and the translator.</p>
 
