--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ permalink: /about/
     
     <p>I conceptualized this while trained as a court interpreter.  Stay true to the meaning, as if it had been said in English.  When done right, the impact is likely to be the same.</p>
    
-     <p>I began to approach language localization over a two-year timespan in the Chicago techspace. I collabated to get websites in front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together, one-on-one, with the architects of prominent civic apps.</p>
+     <p>I began to approach language localization over a two-year timespan in the pouch called the Chicago techspace. I collabated to get websites in front of a wider audience with my foreign language skills. On a weekly basis, I was answering coding questions and working together, one-on-one, with the architects of prominent civic apps.</p>
     
     <p>It can be a great advantage to rely on the same SEO expert for content strategy and translation services. Otherwise, you might lose important details in the process to and from the SEO content strategist and the translator.</p>
 
