--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ permalink: /about/
   <div class="col s12 m8 center-on-small-only">
     <h4>Rene M. Paccha, SEO</h4>
     
-    <p>You may have heard of translations of expressions that sound funny in English.  Or vice versa, maybe you've tried to speak a few inert words in a foreign language but suddenly, everyone is up in arms! SEO is similar, in that it's meaning is uniquely affected based on who and where that target language is spoken (in search).</p>
+    <p>You may have heard of translations of expressions that sound funny in English.  Or vice versa, maybe you've tried to speak a few inert words in a foreign language, and suddenly everyone is up in arms! SEO is similar, in that it's meaning is uniquely affected based on who and where that target language is spoken (in search).</p>
     
     <p>I conceptualized this while trained as a court interpreter.  Stay true to the meaning, as if it had been said in English.  When done right, the impact is likely to be the same.</p>
    
