--- a/contact.html
+++ b/contact.html
@@ -2,66 +2,74 @@
 layout: page
 title: Contact
 permalink: /contact/
+excerpt: +1 (872) 216-9825 📱 Connect with a Chicago-based law marketing SEO that offers services catered to your needs.
 ---
 
 <div class="row">
   <!-- sharing row -->
-  <div class="col s12 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Happy Connecting!</span>
-        <p>
-          <span class="fa-stack fa-lg">
-            <i class="fa fa-square-o fa-stack-2x" aria-hidden="true"></i>
-            <i class="fa fa-phone fa-stack-1x" aria-hidden="true"></i>
-          </span>
-          (872) 216-9825
-          <br />
-          <span class="fa-stack fa-lg">
-            <i class="fa fa-square-o fa-stack-2x" aria-hidden="true"></i>
-            <i class="fa fa-envelope-o fa-stack-1x fa-inverse" aria-hidden="true"></i>
-          </span>
-          <a class="white-text" href="mailto:info@caselinguist.com">info@caselinguist.com</a>
-          <br />
-          <span class="fa-stack fa-lg">
-            <i class="fa fa-square-o fa-stack-2x" aria-hidden="true"></i>
-            <i class="fa fa-twitter fa-stack-1x fa-inverse" aria-hidden="true"></i>
-          </span>
-          <a class="white-text" href="//twitter.com/caselinguist"> @caselinguist</a>
-          <br />
-        </p>
+  <div class="container">
+    <div class="col s12 m6">
+      <div class="card  darken-1">
+        <div class="card-content">
+          <span class="card-title">Happy Connecting!</span>
+          <ul class="fa-ul">
+
+
+
+            <li>            <!-- phone via voice -->
+              <span class="fa-stack fa-lg">
+                <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
+                <i class="fas fa-phone fa-stack-1x" aria-hidden="true"></i>
+              </span>
+              <a class="black-text" href="tel:1-872-216-9825">(872) 216-9825</a>
+              <br />
+            </li>
+
+            <li>            <!-- phone via text -->
+              <span class="fa-stack fa-lg">
+                <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
+                <i class="fas fa-sms fa-stack-1x" aria-hidden="true"></i>
+              </span>
+              <a class="black-text" href="tel:1-312-375-9568">New SMS Message</a>
+              <br />
+            </li>
+
+            <li>            <!-- email -->
+              <span class="fa-stack fa-lg">
+                <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
+                <i class="fas fa-envelope fa-stack-1x" aria-hidden="true"></i>
+              </span>
+              <a class="black-text" href="mailto:rene@caselinguist.com">rene@caselinguist.com</a>
+              <br />
+            </li>
+
+            <li>            <!-- twitter -->
+              <span class="fa-stack fa-lg">
+                <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
+                <i class="fab fa-twitter fa-stack-1x " aria-hidden="true"></i>
+              </span>
+              <a class="black-text" href="//twitter.com/caselinguist"> @caselinguist</a>
+              <br />
+            </li>
+
+
+          </ul>
+
+        </div>
       </div>
+
     </div>
   </div>
 
   <!-- sharing row -->
-  <div class="col s12 m6">
+  <div class="col s12 m12">
     <div class="container">
-
-
-
       <strong>Billing Address</strong>
       <address>
-        <strong>Case Linguist LLC</strong>
-        <br />
-        5829 S. Francisco Ave
-        <br />
-        Chicago, IL 60629
-        <br />
+        <span>Case Linguist LLC</span> •
+        <span>5829 S. Francisco Ave</span> •
+        <span>Chicago, IL 60629</span>
       </address>
     </div>
   </div>
 </div>
-
-
-<!-- new row -->
-<!-- <div class="row">
-  <div class="col offset-s4 offset-m7">
-    <p>
-      To be informed of updates to this site please feel free to subscribe to the email list.
-    </p>
-    <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
-      <i class="fa fa-envelope-o" aria-hidden="true"></i>
-      Mail List</a>
-  </div>
-</div> -->
