bring back headings

--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
 <div class="row">
   <div class="container">
     <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
-      <div class="paragraph-light">
+      <h3 class="paragraph-light">
         RSS feed available
-      </div>
+      </h3>
       <div>
         <li class='rss-subscribe'>
           subscribe
@@ -55,9 +55,9 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
 <div class="row">
   <div class="container">
     <div class="col-md-7">
-      <div class="paragraph-light">
+      <h3 class="paragraph-light">
         Work
-      </div>
+      </h3>
       <div>
         <p>
           <span>
