--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@ excerpt: +1 (872) 216-9825 📱 Connect with a Chicago-based law marketing SEO t
                 <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
                 <i class="fas fa-sms fa-stack-1x" aria-hidden="true"></i>
               </span>
-              <a class="black-text" href="tel:1-312-375-9568">New SMS Message</a>
+              <a class="black-text" href="sms:1-312-375-9568">New SMS Message</a>
               <br />
             </li>
 
