--- a/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
+++ b/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
@@ -32,7 +32,7 @@ chart: true
 
 <h3>Keywords and Spanish-speaking searchers</h3>
 
-<p><strong>Google Trends Vizualization for spanish words (Illinois)</strong> show searches for abogados and another term which historically, outside of search, has led to <a href="https://aila.org/advo-media/tools/psas/psa-on-cir-and-notarios-04-29-13">the use of "unauthorized consultants."</a> For example, <a href="https://aila.org/practice/consumer-protection/stop-notario-fraud">notario, is not a lawyer</a>.</p>
+<p><strong>Google Trends Visualization for spanish words (Illinois)</strong> show searches for "abogados" and another term which historically, outside of search, has led to <a href="https://aila.org/advo-media/tools/psas/psa-on-cir-and-notarios-04-29-13">the use of "unauthorized consultants."</a> For example, <a href="https://aila.org/practice/consumer-protection/stop-notario-fraud">notario, is not a lawyer</a>.</p>
 
 {% include charts/abogado-trends.html %}
 
@@ -40,7 +40,7 @@ chart: true
 
 <ul>
 <li>Top results may lead to overseas results and even advice.</li>
-<li>Confusion over the correct translation among searches (that which is meaningful, beyond literal) is an unaddressed barrier to legal services</li>
+<li>Confusion over the correct translation among searches (that which is meaningful, beyond literal) is potentially a barrier to legal services</li>
 </ul>
 
 <p>-R</p>
