--- a/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
+++ b/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
@@ -1,5 +1,5 @@
 ---
-title: "Not all clients type English in search"
+title: "Not all clients search in English"
 layout: post
 lang: en
 categories: Law-Firm-SEO Immigration
