--- a/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
+++ b/_posts/2019-03-06-searches-in-the-spanish-speaking-community.html
@@ -10,7 +10,7 @@ chart: true
 
 
 
-<p>If you work with clients in Criminal and Immigration court contexts,it is likely that many of your clients will search for your services in a foriegn language.  Many of these searches will be conducted in Spanish.</p>
+<p>If you work with clients in Criminal and Immigration court, it is likely that many of your clients will search for your services in a foriegn language.  Many of these searches will be conducted in Spanish.</p>
 
 <h2>Landscape of search</h2>
 
