--- a/about.html
+++ b/about.html
@@ -23,10 +23,9 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
 
     <p>I began to think about spanish SEO while training as a court interpreter in Chicago. I learned that, if you stay true to the meaning of the search term, as if it had been said in English, then the marketing impact will likely be the same.</p>
 
-     <p>I began to approach language localization over a two-year timespan in the Chicago tech show space. Collaborating on a weekly basis, I was answering coding questions one-on-one, with the architects of prominent civic apps working to get to a wider audience.</p>
+     <p>I began to approach language localization over a two-year timespan in the Chicago tech show space. Collaborating on a weekly basis, I was answering coding questions one-on-one, with the architects of prominent civic apps, such as Expunge.io, working to get to a wider audience.</p>
 
-    <p>I leverage data to provide dynamically-applicable recommendations. It can be a great advantage to rely on the same SEO expert for content strategy and translation services. Otherwise, you might lose important details in the process to and from the SEO content strategist and the translator.</p>
-
+    <p>I leverage data to provide dynamically-applicable recommendations. I will tailor a solution to fit the unique needs of your legal practice and make sure that clients are finding your services in English and in Spanish. The first step is to schedule a free phone consultation. Don't wait. Use the <a href="{{ '/contact' | relative_url }}">contact link</a> to reach out and start taking advantage of the SEO optimization process. </p>
   </div>
 </div>
 </hr>
