updated via own lint process

--- a/about.html
+++ b/about.html
@@ -4,101 +4,89 @@ title: About Company
 permalink: /about/
 excerpt: Consider the advantage you may gain by using the same SEO expert for content strategy and translation services.
 ---
-<div class="row">
-  <br/>
 
-
-  <div class="col s12 m3 center-on-small-only">
-    <div class="image-container">
-      <div class="card">
-      <img class="materialboxed center-align responsive-img" width="650" src="{{ '/assets/about-rene-picture-250.png' | relative_url }}" srcset="{{ '/assets/about-rene-picture-500.png' | relative_url }} 500w, {{ '/assets/about-rene-picture.png' | relative_url }} 1000w" alt="rene professional picture wood pattern background">
+<div class='row'>
+  <br>
+  <div class='col s12 m3 center-on-small-only'>
+    <div class='image-container'>
+      <div class='card'>
+        <img alt='rene picture wood background' class='materialboxed center-align responsive-img' src='{{ "/assets/about-rene-picture-250.png" | relative_url }}' srcset='{{ "/assets/about-rene-picture-500.png" | relative_url }} 500w, {{ "/assets/about-rene-picture.png" | relative_url }} 1000w' width='650'>
       </div>
-
     </div>
   </div>
-  <div class="col s12 m8 center-on-small-only">
-    <span class="name-text">Rene M. Paccha, SEO</span>
-
-    <p>You may have heard of translations of expressions that sound funny in English.  Or vice versa, maybe you've tried to speak a few inert words in a foreign language, and suddenly everyone is up in arms! SEO is similar, in that it's meaning is uniquely affected based on who and where that target language is written.</p>
-
-    <p>I began to think about spanish SEO while training as a court interpreter in Chicago. I learned that, if you stay true to the meaning of the search term, as if it had been said in English, then the marketing impact will likely be the same.</p>
-
-     <p>I began to approach language localization over a two-year timespan in the Chicago tech show space. Collaborating on a weekly basis, I was answering coding questions one-on-one, with the architects of prominent civic apps, such as Expunge.io, working to get to a wider audience.</p>
-
-    <p>I leverage data to provide dynamically-applicable recommendations. I will tailor a solution to fit the unique needs of your legal practice and make sure that clients are finding your services in English and in Spanish. The first step is to schedule a free phone consultation. Don't wait. Use the <a href="{{ '/contact' | relative_url }}">contact link</a> to reach out and start taking advantage of the SEO optimization process. </p>
+  <div class='col s12 m8 center-on-small-only'>
+    <span class='name-text'>Rene M. Paccha, SEO</span>
+    <p>
+      You may have heard of translations of expressions
+      that sound funny in English.  Or vice versa,
+      maybe you've tried to speak a few inert words
+      in a foreign language, and suddenly everyone is
+      up in arms! SEO is similar, in that it's meaning is
+      uniquely affected based on who and where that target language is written.
+    </p>
+    <p>
+      I began to think about spanish SEO while training
+      as a court interpreter in Chicago.
+      I learned that, if you stay true
+      to the meaning of the search term,
+      as if it had been said in English,
+      then the marketing impact will likely be the same.
+    </p>
+    <p>
+      I began to approach language localization over a two-year timespan
+      in the Chicago tech show space. Collaborating on a weekly basis, I was
+      answering coding questions one-on-one, with the architects of prominent
+      civic apps, such as Expunge.io, working to get to a wider audience.
+    </p>
+    <p>
+      I leverage data to provide dynamically-applicable recommendations.
+      I will tailor a solution to fit the unique needs of your legal practice
+      and make sure that clients are finding your services in English and
+      in Spanish. The first step is to schedule a free phone consultation.
+      Don't wait. Use the
+      <a href='{{ "/contact" | relative_url }}'>contact link</a>
+      to reach out and start taking advantage of the SEO optimization process.
+    </p>
   </div>
 </div>
-</hr>
-</br>
-
-
-<div class="row">
-  <div class="container">
-    <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
-      <h3 class="paragraph-light">
+<div class='row'>
+  <div class='container'>
+    <div class='col-md-7'>
+      <h2 class='paragraph-light'>
+        Work
+      </h2>
+      <div>
+        <p>
+          <span>
+            Want to see an example of optimization at work?
+            <li>
+              The code for this website is on
+              <a href='//github.com/caselinguist/'>
+                Github
+                <i aria-hidden='true' class='fab fa-github-alt'></i>
+              </a>
+            </li>
+          </span>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class='row'>
+  <div class='container'>
+    <div class='col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1'>
+      <h3 class='paragraph-light'>
         RSS feed available
       </h3>
       <div>
         <li class='rss-subscribe'>
           subscribe
-          <a class="flow-text" href='{{ "/feed.xml" | relative_url }}'>via RSS</a>
+          <a class='flow-text' href='{{ "/feed.xml" | relative_url }}'>via RSS</a>
         </li>
-
       </div>
     </div>
   </div>
 </div>
 
-
-
-<div class="row">
-  <div class="container">
-    <div class="col-md-7">
-      <h3 class="paragraph-light">
-        Work
-      </h3>
-      <div>
-        <p>
-          <span>
-            Want to see an example of optimization at work? The code for this website is on
-            <a href="//github.com/caselinguist/">
-              Github
-              <i class="fab fa-github-alt" aria-hidden="true"></i></a>
-          </span>
-        </p>
-        <!-- <p>
-          Please subscribe below to receive curated updates
-        </p> -->
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="row">
-  <div class="container">
-    <div class="col-md-7">
-      <!-- <a class="waves-effect waves-light btn" href="//eepurl.com/cECuxT">
-
-        <span class="flow-text">
-          Subscribe
-        </span>
-      </a> -->
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="container">
-    <div class="col-md-7 col-md-offset-2 col-xs-9 col-xs-offset-1">
-      <!-- <h3>
-        Disclaimer
-      </h3>
-      <p>
-        We are not the
-        <a class="light-blue-text" rel="external" href="http://www.illinoiscourts.gov/CivilJustice/AccessToJustice.asp">Illinois Courts Language Access Program.</a>
-      </p> -->
-    </div>
-  </div>
-</div>
 
 {% include photo-pop.html %}
