--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
     </div>
   </div>
   <div class='col s12 m8 center-on-small-only'>
-    <span class='name-text'>Rene M. Paccha, SEO</span>
+    <h2 class='name-text'>Rene M. Paccha, SEO</h2>
     <p>
       You may have heard of translations of expressions
       that sound funny in English.  Or vice versa,
@@ -52,16 +52,17 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
 <div class='row'>
   <div class='container'>
     <div class='col-md-7'>
-      <h2 class='paragraph-light'>
-        Work
-      </h2>
+      <h3 class='paragraph-light'>
+        <!-- Work -->
+        Marketing optimization at work
+      </h3>
       <div>
         <p>
           <span>
-            Want to see an example of optimization at work?
+
             <li>
               The code for this website is on
-              <a href='//github.com/caselinguist/'>
+              <a class="flow-text" href='//github.com/caselinguist/'>
                 Github
                 <i aria-hidden='true' class='fab fa-github-alt'></i>
               </a>
@@ -87,6 +88,25 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
     </div>
   </div>
 </div>
+
+
+<!-- SCHEMA.ORG -->
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "Case Linguist LLC",
+  "member": {
+    "@type": "OrganizationRole",
+    "member": {
+      "@type": "Person",
+      "name": "Rene M. Paccha"
+    },
+    "roleName": "SEO"
+  }
+}
+</script>
+
 
 
 {% include photo-pop.html %}
