--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@ excerpt: +1 (872) 216-9825 📱 Connect with a Chicago-based law marketing SEO t
   <!-- sharing row -->
   <div class="col s12 m12">
     <div class="container">
-      <strong>Billing Address</strong>
+      <h2>Billing Address</h2>
       <address>
         <span>Case Linguist LLC</span> •
         <span>5829 S. Francisco Ave</span> •
