--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 layout: page
 title: Contact
 permalink: /contact/
-excerpt: +1 (872) 216-9825 📱 Connect with a Chicago-based law marketing SEO that offers services catered to your needs.
+excerpt: +1 (872) 216-9825 📱 Connect via Chicago-based SEO offering services catered to your legal marketing needs.
 ---
 
 <div class="row">
