updating sitemap.html

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Visual Sitemap
 ---
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/7.1.1/highcharts.src.js" integrity="sha256-/JSfTY/H4K9LQXyfDS4+meKre7KqcDsHH2ZSENd2FnI=" crossorigin="anonymous"></script>
