--- a/sitemap.html
+++ b/sitemap.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Visual Sitemap
+title: Sitemap
 ---
+<h2>Visual layout of pages</h2>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/7.1.1/highcharts.src.js" integrity="sha256-/JSfTY/H4K9LQXyfDS4+meKre7KqcDsHH2ZSENd2FnI=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/7.1.1/modules/sankey.src.js" integrity="sha256-PPmfhQ2vPhsZsEL7586QsfPeZz95vnFfGaS8TBPQT+A=" crossorigin="anonymous"></script>
