--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@ excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to lega
                 <!-- <i class="fas fa-square fa-stack-2x" aria-hidden="true"></i> -->
                 <i class="fas fa-envelope fa-stack-1x" aria-hidden="true"></i>
               </span>
-              <a class="black-text" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a>
+              <a class="at-aware black-text" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a>
               <br />
             </li>
 
