--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
       and make sure that clients are finding your services in English and
       in Spanish. The first step is to schedule a free phone consultation.
       Don't wait. Use the
-      <a href='{{ "/contact" | relative_url }}'>contact link</a>
+      <a href='{{ "/contact/" | relative_url }}'>contact link</a>
       to reach out and start taking advantage of the SEO optimization process.
     </p>
   </div>
