--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@ excerpt: Consider the advantage you may gain by using the same SEO expert for co
 
             <li>
               The code for this website is on
-              <a class="flow-text" href='//github.com/caselinguist/'>
+              <a class="flow-text" rel="noopener" target="_blank" href='//github.com/caselinguist/'>
                 Github
                 <i aria-hidden='true' class='fab fa-github-alt'></i>
               </a>
