--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@ excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to lega
       <span class="fa-stack fa-lg">
         <i class="fas fa-phone fa-stack-1x" aria-hidden="true"></i>
       </span>
-      <a class="black-text" href="tel:1-872-216-9825">(872) 216-9825</a>
+      <a class="black-text" href="tel:+18722169825">(872) 216-9825</a>
     </li>
 
     <li>
@@ -34,7 +34,7 @@ excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to lega
       <span class="fa-stack fa-lg">
         <i class="fab fa-twitter fa-stack-1x " aria-hidden="true"></i>
       </span>
-      <a class="at-aware black-text" href="//twitter.com/caselinguist">@caselinguist</a>
+      <a class="at-aware black-text" href="//twitter.com/caselinguist" rel="noopener">@caselinguist</a>
 
     </li>
 
