--- a/contact.html
+++ b/contact.html
@@ -5,40 +5,23 @@ permalink: /contact/
 excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to legal marketing.
 ---
 
-
 <div class="container">
   <ul class="fa-ul">
-
     <li>
-      <span class="fa-stack fa-lg">
-        <i class="fas fa-phone fa-stack-1x" aria-hidden="true"></i>
-      </span>
-      <a class="black-text" href="tel:+18722169825">(872) 216-9825</a>
+      <a class="black-text icon-phone" href="tel:+18722169825">(872) 216-9825</a>
     </li>
 
     <li>
-      <span class="fa-stack fa-lg">
-        <i class="fas fa-sms fa-stack-1x" aria-hidden="true"></i>
-      </span>
-      <a class="black-text" href="sms:1-312-375-9568">New SMS Message</a>
+      <a class="black-text icon-commenting" href="sms:1-312-375-9568">New SMS Message</a>
     </li>
 
     <li>
-      <span class="fa-stack fa-lg">
-        <i class="fas fa-envelope fa-stack-1x" aria-hidden="true"></i>
-      </span>
-      <a class="at-aware black-text" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a>
+      <a class="at-aware black-text icon-mail-alt" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a>
     </li>
 
     <li>
-      <span class="fa-stack fa-lg">
-        <i class="fab fa-twitter fa-stack-1x " aria-hidden="true"></i>
-      </span>
-      <a class="at-aware black-text" href="//twitter.com/caselinguist" rel="noopener">@caselinguist</a>
-
+      <a class="at-aware black-text icon-twitter" href="//twitter.com/caselinguist" rel="noopener">@caselinguist</a>
     </li>
-
-
   </ul>
 
   <div class="container">
