--- a/terms.html
+++ b/terms.html
@@ -20,7 +20,7 @@ layout: default
   <h1>Terms</h1>
 
   <p><strong>Contact First</strong></p>
-  <p>It is strongly recommended to make contact via phone or email at <a href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a> <em>before</em> submitting payment.</p>
+  <p>It is strongly recommended to make contact via phone or email at <a class="at-aware text-black" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a> <em>before</em> submitting payment.</p>
   <p>For new clients the initial payment will act as a retainer.  The rate of services performed will be billed hourly at $150/hour unless we agree otherwise.</p>
 
 
