update privacy excerpt

--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Privacy Policy
+excerpt: Analytics are used to improve customer experience.  Policies are subject to update.
 ---
 
 <style type="text/css" media="screen">
