--- a/privacy.html
+++ b/privacy.html
@@ -22,8 +22,12 @@ excerpt: Analytics are used to improve customer experience.  Policies are subjec
 </header>
 
 <div class="container-alt">
-  <h2 class="flow-text">User Data</h2>
+
+  <h2 class="flow-text">Areas of Information and Data Collection</h2>
+
+  <h3 class="flow-text">User Data</h3>
   <p>Case Linguist uses Google analytics to better understand user engagement.</p>
-  <h2 class="flow-text">Payments</h2>
+
+  <h3 class="flow-text">Payments</h3>
   <p>No credit card information is stored by Case Linguist LLC.</p>
 </div>
