--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Privacy Policy
+exclude: true
 excerpt: Analytics are used to improve customer experience.  Policies are subject to update.
 ---
 
