--- a/terms.html
+++ b/terms.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: Terms
+last_modified_at: 2019-07-04
+exclude: true
 ---
 
 <style type="text/css" media="screen">
@@ -8,7 +11,7 @@ layout: default
     max-width: 600px;
     text-align: center;
   }
-  h1 {
+  h3 {
     margin: 30px 0;
     font-size: 4em;
     line-height: 1;
@@ -17,11 +20,13 @@ layout: default
 </style>
 
 <div class="container-alt">
-  <h1>Terms</h1>
+  <h1 class="flow-text">{{ page.title }}</h1>
 
-  <p><strong>Contact First</strong></p>
-  <p>It is strongly recommended to make contact via phone or email at <a class="at-aware text-black" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a> <em>before</em> submitting payment.</p>
-  <p>For new clients the initial payment will act as a retainer.  The rate of services performed will be billed hourly at $150/hour unless we agree otherwise.</p>
+  <h2 class="flow-text">Quick key points for initial services</h2>
+  <h3 class="flow-text">Communication</h3>
+  <p>It is strongly recommended to make contact via phone or email at <a class="at-aware text-black" href="mailto:rene@marketingforlawyers.org">rene@marketingforlawyers.org</a></p
+  <h3>Rate</h3>
+  <p>For new clients, the rate of services performed will be billed hourly at $150/hour, as of the time of this writing.</p>
 
 
 </div>
