--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,9 @@ layout: page
 title: Contact
 permalink: /contact/
 excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to legal marketing.
+sitemap:
+  changefreq: yearly
+  priority: 0.8
 ---
 
 <div class="container">
