added good schema

--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@ layout: page
 title: About Company
 permalink: /about/
 excerpt: Consider the advantage you may gain by using the same SEO expert for content strategy and translation services.
+schema:
+  title: About Company
+  description: Consider the advantage you may gain by using the same SEO expert for content strategy and translation services.
 ---
 
 <div class='row'>
