--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,11 @@ excerpt: +1 (872) 216-9825 - Chicago-based SEO offering services catered to lega
 sitemap:
   changefreq: yearly
   priority: 0.8
+
+schema:
+  title: Contact
+  description: Chicago-based SEO offering services catered to legal marketing.
+
 ---
 
 <div class="container">
