--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,9 @@ layout: default
 title: Privacy Policy
 exclude: true
 excerpt: Analytics are used to improve customer experience.  Policies are subject to update.
+schema:
+  title: Privacy Policy
+  description: Analytics are used to improve customer experience.  Policies are subject to update.
 ---
 
 <style type="text/css" media="screen">
