--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,9 @@ layout: default
 title: Terms
 last_modified_at: 2019-07-04
 exclude: true
+schema:
+  title: Terms
+  description: Terms & Conditions for Case Linguist Marketing for Lawyers
 ---
 
 <style type="text/css" media="screen">
